cluster-logging/overlays/moc/routes/route.enc.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
    name: elasticsearch
    namespace: openshift-logging
spec:
    host: null
    to:
        kind: Service
        name: elasticsearch
    tls:
        termination: reencrypt
        destinationCACertificate: ENC[AES256_GCM,data:ZDu/7x07tLC6rmte264X1wM+eRIfsRCyC15xYMVMQv0gmspBhROC8/BUASwxOTCjVaI1IKtlB/7KsFJYIEElWOmIt25UnMOpZuIK8Kpu+wTBYoWK3htqULrEWKTGV6BWGDLjT4XbnzEZ5i1QxAQIY/Pr5xjyv41wFEqHTOMxs3b1v0gxec68UYL5pkgwGGhLQ7wWsasxXqbytAVjzHXddWtv86cg1/YWLBI90mMjQ1ML5vbDVkYnWVuQffSUeq/BK+GqLVD+vlw5M0dlJ3QxnFaATUPLpab7nuU5PykeS20zJa1CM5jf2lCimDfZH2zV5pCHUPmvHrvoWToRflhgptjfsqEcGlUDePTLM087Gh6CvhDxHgorscN4jqvJopVgAQFTX31EwGVg1ABVt6Jj92vearRpDQjIYh7oIgl5bWfyZrJf944835qNRTvgaI [...]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    lastmodified: '2021-02-16T23:32:57Z'
    mac: ENC[AES256_GCM,data:9GVU4tUYaq8DAf0ltl54EelQ9nJ3VdIcUYeozqGy6XsWgzztrXSlVTzQK3BsCNTupC4ZPckP1DhD0S7zjpyS29QRmJ8LnGjB2heemAStG4Z7ChEEvQxLyjKKD3i+36825FWVPDfVIswbPcrbXdvuVXX7HiHEar7FpVKUGRI9Z40=,iv:tP1faFUTnzQpHLbqz2m0FveW3XMGc1Ds6sCHZyeRU+I=,tag:24sBjkiDA+wl2mXtK1QUHA==,type:str]
    pgp:
    -   created_at: '2021-02-16T23:32:56Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA9aKBcudqifiARAApP00L3WMptdelEH00+49Yj0DIzLS5Luayo98tWMeblGp
[...]
            =YSRa
            -----END PGP MESSAGE-----
        fp: 0508677DD04952D06A943D5B4DC4116D360E3276
    encrypted_regex: ^destinationCACertificate$
    version: 3.6.1
